--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "sae-lens>=1.6.0",
     "jaxtyping>=0.2.28",
     "dreamy @ git+https://github.com/Confirm-Solutions/dreamy",
+    "streamlit>=1.34.0",
+    "gradio>=4.29.0",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
